skin/test.css
@font-face {
  font-family: 'Source Sans Pro';
  font-style: normal;
  font-weight: 400;
  src: local('Source Sans Pro'), local('SourceSansPro-Regular'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v2/ODelI1aHBYDBqgeIAH2zlBM0YzuT7MdOe03otPbuUS0.woff) format('woff');
}

#log-panel {
  border: 2px solid gray;
  background-color: gray;
  border-radius: 8px;
  opacity: 0.9;
}

#log-textbox {
  font-family: Source Sans Pro,georgia,arial,sans-serif;
  width: 350px;
  font-size: 40px;
  border-radius: 15px;
  opacity: 1.0;
}

#search-button {
  border: none;
}

#log-text{
  padding: 3px;
  color:white;
  border: 8px solid black;
  font-family: georgia,arial,sans-serif;
  font-size: 10px;
}

#found-title {
  background-color: red;
}

